Fixed the squashed image
Changed width to 250px form 150px and added height attribute.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
     text-align: center;
     font-family: 'Happy Monkey', cursive;
@@ -16,7 +14,8 @@ p {
 }
 
 #bff-img {
-    width: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     border: 6px solid #EFB0C9;
     margin-bottom: 10px;
